# egui-objc2-metal-example

./: Cargo.toml  README.md  triangle.air
src/: app.rs  main.rs  triangle.metal
