[package]
name = "egui-objc2-metal-example"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.30", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "wgpu",          # Use the glow rendering backend. Alternative: "wgpu".
] }
egui = "0.30.0"
objc2-foundation = { git = "https://github.com/madsmtm/objc2.git", version = "0.2.2", default-features = false, features = [
    "alloc",
    "std",
] }
objc2 = { git = "https://github.com/madsmtm/objc2.git", version = "0.5.2", default-features = false, features = [
    "std",
] }
objc2-metal = { git = "https://github.com/madsmtm/objc2.git", version = "0.2.2", features = [
    "all",
] }
